<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Session13</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="nombre">Nombre</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="registrar">Registrar</string>
    <string name="listado">Listado</string>

</resources>
