<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre" />

    <EditText
        android:id="@+id/txtApellidoPaterno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellido_paterno" />

    <EditText
        android:id="@+id/txtApellidoMaterno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellido_materno" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar" />

    <Button
        android:id="@+id/btnListado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listado"/>

</LinearLayout>
